--- a/AppFluxoDeCaixa/appsettings.json
+++ b/AppFluxoDeCaixa/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=pedroaraujo.database.windows.net; Initial Catalog=FluxoDeCaixa; TrustServerCertificate=True; User ID=senai;Password=Admin@123;"
+    "DefaultConnection": "Data Source=dbPedroAraujo.mssql.somee.com; Initial Catalog=dbPedroAraujo; TrustServerCertificate=True; User ID=PedroAraujo_SQLLogin_1;Password=ptblbe2hs7;"
   },
 
   "Logging": {
